# ceres_test

./: .gitignore  CMakeLists.txt
include/: quaternion_heap.h  quaternion_stack.h
include/lc_vi_mhe/: globals.h  lc_vi_mhe.h  true_state.h
matlab/: lc_vi_mhe.m
src/: jacobians.cpp  lm_opt.cpp  manifold_jacobians.cpp  optimize_r_only.cpp  optimize_rt.cpp  quat_tests.cpp  rosenbrock.cpp  rosenbrock_eigen.cpp  state_jacobian.cpp  vo_1d.cpp  vo_2d.cpp
src/lc_vi_mhe/: lc_vi_mhe.cpp  lc_vi_mhe_test.cpp  true_state.cpp
